# comfyui_gemini_nano_banana

./: .gitignore  Gemini_Nano_Banana.json  LICENSE  README.md  __init__.py  api_client.py  constants.py  doc_utils.py  image_utils.py  nodes.py  nodes_text.py  presets.py  pyproject.toml  requirements.txt  response_utils.py
descriptions/: GeminiEditImage.md  GeminiTextToImage.md
instruction_presets/: README.md
instruction_presets/enhanced/: character-cutout.json  color-flat.json  detail-boost.json  monochrome-vivid-eyes.json  pool-party-theme.json
instruction_presets/system_prompt/: brand-style-guardian.md  minimal-edit.md  multi-image-composer.md
workflows/: Gemini_Nano_Banana.json
